// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render left-button、right-button slot correctly 1`] = `
<div class="r-slider">
  <div class="r-slider__bar"
       style="width: 50%; left: 30%;"
  >
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--left"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="30"
         aria-valuemax="100"
         aria-orientation="horizontal"
    >
      left-30
    </div>
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--right"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="80"
         aria-valuemax="100"
         aria-orientation="horizontal"
    >
      right-80
    </div>
  </div>
</div>
`;

exports[`should render readonly Slider correctly 1`] = `
<div class="r-slider">
  <div class="r-slider__bar"
       style="width: 50%; left: 0%;"
  >
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--right"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="50"
         aria-valuemax="100"
         aria-readonly="true"
         aria-orientation="horizontal"
    >
      <div class="r-slider__button">
      </div>
    </div>
  </div>
</div>
`;

exports[`should render reversed range slider correctly 1`] = `
<div class="r-slider">
  <div class="r-slider__bar"
       style="width: 15%; right: 25%;"
  >
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--left"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="25"
         aria-valuemax="100"
         aria-orientation="horizontal"
    >
      <div class="r-slider__button">
      </div>
    </div>
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--right"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="40"
         aria-valuemax="100"
         aria-orientation="horizontal"
    >
      <div class="r-slider__button">
      </div>
    </div>
  </div>
</div>
`;

exports[`should render reversed slider correctly 1`] = `
<div class="r-slider">
  <div class="r-slider__bar"
       style="width: 25%; right: 0%;"
  >
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--left"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="25"
         aria-valuemax="100"
         aria-orientation="horizontal"
    >
      <div class="r-slider__button">
      </div>
    </div>
  </div>
</div>
`;

exports[`should render reversed vertical slider correctly 1`] = `
<div class="r-slider r-slider--vertical">
  <div class="r-slider__bar"
       style="height: 25%; bottom: 0%;"
  >
    <div role="slider"
         class="r-slider__button-wrapper r-slider__button-wrapper--left"
         tabindex="0"
         aria-valuemin="0"
         aria-valuenow="25"
         aria-valuemax="100"
         aria-orientation="vertical"
    >
      <div class="r-slider__button">
      </div>
    </div>
  </div>
</div>
`;
